<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="Sobre mi">
        <menu>
            <item android:title="@string/dev_name"/>
            <item android:title="@string/dev_age"/>
            <item android:title="@string/dev_address"/>
        </menu>
    </item>
    <item android:title="@string/dev_work_experience">
        <menu>
            <item android:title="@string/dev_work_it_uber"/>
            <item android:title="@string/dev_work_designer_uber"/>
            <item android:title="@string/dev_work_editor_universal"/>
        </menu>
    </item>
    <item android:title="@string/dev_education">
        <menu>
            <item android:title="@string/dev_education_dh"/>
            <item android:title="@string/dev_education_dh_android"/>
            <item android:title="@string/dev_education_davinci"/>
            <item android:title="@string/dev_education_davinci_designer"/>
        </menu>
    </item>
</menu>